# coq2hs-cpp-verify

./: .gitignore  ChangeLog.md  LICENSE  README.md  coq2hs-cpp-verify.cabal  stack.yaml
app/: Main.hs
cpp/: CMakeLists.txt  README.md  build.sh
cpp/include/: candidates.hpp
cpp/src/: main.cpp
doc/: HsLib.html  coq2hs-cpp-verify.txt  doc-index.json
doc/src/: Paths_coq2hs_cpp_verify.html
docs/: HsLib.html  InlineCPP.html  coq2hs-cpp-verify.haddock  coq2hs-cpp-verify.txt  doc-index.html  doc-index.json  index.html
docs/src/: HsLib.html  InlineCPP.html  Paths_coq2hs_cpp_verify.html
src/: HsLib.hs  InlineCPP.hs
test/: Spec.hs
